# RayTracer

./: .gitignore  CMakeLists.txt  CMakelists.txt  ReadMe.md
.github/workflows/: check-build.yml  synchronize.yml
Config/: cone.cfg  cylender.cfg  test.cfg  test2.cfg
Dependencies/: build-SFML.cmake  build-libconfig.cmake
lib/: libconfig++.lib  libconfig.lib
plugins/: AppApi.hpp
plugins/primiZIZI/: PrimiZizi.cpp  PrimiZizi.hpp  api.cpp  api.hpp
src/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
src/App/: LibLoader.hpp
src/Builder/: Builder.cpp  Builder.hpp  CMakeLists.txt  IBuilder.hpp
src/Display/: CMakeLists.txt  DisplayStructs.hpp  ILibGraphicHandler.hpp  LibGraphicHandler.cpp  LibGraphicHandler.hpp
src/Material/: AMaterial.cpp  AMaterial.hpp  CMakeLists.txt  FlatColor.cpp  FlatColor.hpp  IMaterial.hpp  Reflect.cpp  Reflect.hpp
src/Raytracer/: CMakeLists.txt  ILightCalculator.hpp  IVector.hpp  LightCalculator.cpp  LightCalculator.hpp  Vector.cpp  Vector.hpp
src/Scene/: Builder.cpp  Builder.hpp  CMakeLists.txt  Director.cpp  Director.hpp  IBuilder.hpp  IDirector.hpp  IScene.hpp  Scene.cpp  Scene.hpp
src/Transformable/: ATransformable.cpp  ATransformable.hpp  CMakeLists.txt  ITransformable.hpp  Point3d.cpp  Point3d.hpp  TransformableStruct.hpp
src/Transformable/Camera/: 3Dmatrix.cpp  3Dmatrix.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  ICamera.hpp  Matrix3D.cpp  Matrix3D.hpp
src/Transformable/Light/: ALight.cpp  ALight.hpp  Ambiant.cpp  Ambiant.hpp  Ambient.cpp  Ambient.hpp  CMakeLists.txt  Directional.cpp  Directional.hpp  ILight.hpp  Light.hpp
src/Transformable/Primitive/: APrimitive.cpp  APrimitive.hpp  CMakeLists.txt  Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  IPrimitive.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp
src/Transformation/: CMakeLists.txt  ITransformation.hpp  Rotation.cpp  Rotation.hpp  Translation.cpp  Translation.hpp
src/Vector/: IVector.hpp  Vector.cpp  Vector.hpp
test/: exFile.txt  testCone.cpp  testPlance.cpp  testSfml.cpp  testSphere.cpp  testVector.c  testVector.cpp
